objects/Apex_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_URL__c</fullName>
        <label>Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Email__c</fullName>
        <label>User Email</label>
        <type>Email</type>
    </fields>
    <label>Apex Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AEL-{00}</displayFormat>
        <label>Apex Error Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>